<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iTake</string>
    <string name="drug_name_hint">Medication Name.</string>
    <string name="drug_purpose_hint">Medication Purpose.</string>
    <string name="drug_dosage_hint">Medication Dosage.</string>
    <string name="drug_frequency_hint">Medication Frequency.</string>
    <string name="drug_prescriber_hint">Prescribing MD.</string>
    <string name="new_medication_label">New Medication</string>
    <string name="drug_details_label">Details</string>
    <string name="drug_notes_label">Notes</string>
    <string name="date_picker_title">Date of drug:</string>
    <string name="drugs_title">Drugs</string>
    <string name="new_drug">New Drug</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">Sometimes tolerance is not a virtue.</string>
    <string name="delete_drug">Delete Drug</string>
    <string name="take">Take!</string>
    <string name="capture">Capture</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="password_hint">password</string>
    <string name="email_hint">email</string>
    <string name="login_prompt">Enter login information</string>
    <string name="login">Log in!</string>
    <string name="new_user">New to iTake?</string>
    <string name="registration">Enter registration information</string>
    <string name="password_confirm_hint">confirm password</string>
    <string name="alarm_hello">The alarm will start in five seconds.</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="drug_icon">My Medicine</string>
    <string name="history_icon">My History</string>
    <string name="cheat_icon">My Information</string>
    <string name="settings_icon">Settings</string>
    <string-array name="soundSpinItems">
        <item>Default</item>
        <item>Bell</item>
        <item>Jazzy</item>
    </string-array>
    <string name="reminder_frequency">Reminder Frequency</string>

</resources>