<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="0dp"
    android:background="@color/blue_back"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="40dp" >

    <TextView
        android:id="@+id/newuser_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:text="@string/new_user"
        android:textColor="@color/white_back"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/reg_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:paddingBottom="20dp"
        android:paddingTop="30dp"
        android:text="@string/registration"
        android:textColor="@color/white_back"
        android:textColorHint="@color/white_back"
        android:textSize="20sp" />
    
        <EditText
        android:id="@+id/emaillogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_back"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:textSize="20sp" >

        <requestFocus />
    </EditText>
    
        <EditText
        android:id="@+id/passwordlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white_back"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:textSize="20sp" />
        
        <EditText
        android:id="@+id/passwordconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white_back"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/password_confirm_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:textSize="20sp" />

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="20dp"
            android:background="@color/grey_button"
            android:maxHeight="0dp"
            android:maxLines="1"
            android:minHeight="40dp"
            android:minWidth="80dp"
            android:padding="0dp"
            android:paddingLeft="0dp"
            android:text="@string/login"
            android:width="0dp" />

</LinearLayout>